# rusty-ts

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
benches/baselines/x86_64-pc-windows-msvc/: baseline.json
completions/: _rusty-ts  rusty-ts.bash  rusty-ts.fish  rusty-ts.ps1
docs/: COMPATIBILITY.md  DESIGN.md  ci-runtime-baseline.md  feature-layout.md  public-api.txt
fixtures/: README.md
fixtures/inputs/binary/: passthrough.txt
fixtures/moreutils_outputs/binary/: passthrough.txt
fixtures/moreutils_outputs/custom_format/: brackets.txt  iso.txt  with_year.txt
fixtures/moreutils_outputs/default/: CAPTURE.json  single_line.txt  three_lines.txt
fixtures/moreutils_outputs/fractional/: epoch.txt  seconds.txt
fixtures/moreutils_outputs/strict_errors/: unknown_help.txt  unknown_tz.txt  unknown_u.txt
fixtures/scripts/: capture-default.sh
src/: cli.rs  compat_matrix.rs  completions.rs  error.rs  lib.rs  main.rs  mode.rs  pipeline.rs  relative.rs
src/time/: clock.rs  format.rs  mod.rs  tz.rs
tests/: cli_errors.rs  compat_default.rs  compat_matrix.rs  compat_strict.rs  completions_drift.rs  lib_api.rs  public_api.rs  smoke.rs
tests/common/: mod.rs
tools/feature-lint/: .shellcheck  README.md  lint.sh  run.sh
